# solana-streamer

./: .gitignore  ARBITRAGE_DEBUG_NOTES.md  CLMM_DISCRIMINATOR_FIX.md  Cargo.toml  FOCUSED_ARBITRAGE_GUIDE.md  QUICK_START_JUPITER_ORCA.md  README.md  README_CN.md  TOKEN_PAIR_FILTERING_COMPARISON.md  TROUBLESHOOTING_NO_EVENTS.md  fix_raydium_idl.py
configs/: README.md
configs/protocol1/: jupiter_v6.json
configs/protocols/: example_orca.json  orca_whirlpool.json  raydium_amm_v4.json
dex-idl-parser/: Cargo.toml  README.md
dex-idl-parser/examples/: simple_parser.rs
dex-idl-parser/src/: lib.rs  streaming.rs
dex-idl-parser/src/idl/: loader.rs  types.rs
dex-idl-parser/src/parser/: instruction.rs
dex-idl-parser/src/types/: event.rs  jupiter.rs  mod.rs
examples/: arbitrage_detector_example.rs  config_based_parser_example.rs  dynamic_subscription.rs  focused_arbitrage_example.rs  grpc_example.rs  jupiter_agg_v6_example.rs  jupiter_orca_streaming.rs  jupiter_stream.rs  nonce_listen_example.rs  parse_tx_events.rs  shred_example.rs  simple_arbitrage_example.rs  simple_stream_test.rs  token_balance_listen_example.rs  token_decimals_listen_example.rs  unified_dex_parser_example.rs
market-streaming/: Cargo.toml
market-streaming/examples/: monitor_pools.rs
market-streaming/src/: pool_states.rs  state_cache.rs  stream_client.rs
src/: main.rs
src/protos/: shredstream.rs
src/resources/idls/: jupter_v6_amm.json  raydium.json
src/streaming/: arbitrage.rs  mod.rs  shred_stream.rs  yellowstone_grpc.rs  yellowstone_sub_system.rs
src/streaming/grpc/: pool.rs  (+1 more)
(+36 files in other folders)
