[package]
name = "dex-idl-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "3.0.0"
borsh = { version = "1.5.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
hex = "0.4"
bs58 = "0.5"

# For yellowstone gRPC integration
yellowstone-grpc-proto = "9.0.0"
prost-types = "0.14.1"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
