[package]
name = "market-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "3.0.0"
borsh = { version = "1.5.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
hex = "0.4"

# Yellowstone gRPC integration
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"

# Concurrent collections
dashmap = "6.0.1"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3"

# Logging
log = "0.4"
tracing = "0.1"

# TLS support
rustls = { version = "0.23.23", features = ["ring"], default-features = false }

# Use the local dex-idl-parser
dex-idl-parser = { path = "../dex-idl-parser" }
solana-streamer-sdk = "0.5.0"

[dev-dependencies]
env_logger = "0.11"
